--- a/css/style.css
+++ b/css/style.css
@@ -59,19 +59,19 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 2rem;
+  padding: 3rem;
   border-radius: 2rem;
 }
 
 .account-cta {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  gap: 2rem;
+  gap: 5rem;
 }
 
 .user-info {
   font-size: 2.4rem;
-  margin-bottom: 3.2rem;
+  margin-bottom: 2.8rem;
 }
 
 .account-user-cta {
@@ -92,4 +92,10 @@
   display: flex;
   justify-content: space-between;
   gap: 1rem;
+}
+
+.account-user-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
