Added readme and notification for invalid user

--- a/css/general.css
+++ b/css/general.css
@@ -118,3 +118,11 @@ body {
   background-color: var(--mid-blue);
   color: var(--white-gray);
 }
+
+.footer-section {
+  margin-bottom: 2rem;
+}
+
+.footer-text {
+  color: var(--white-gray);
+}
